--- a/lab10.html
+++ b/lab10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Practice Lab</title>
+    <title>Lab 10</title>
     <!-- Bootstrap CSS via CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Custom CSS for additional styling -->
@@ -12,8 +12,8 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Your Brand</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light border">
+  <a class="navbar-brand" href="#">R</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -38,8 +38,8 @@
 <!-- Hero Section -->
 <section class="hero-section">
   <div class="container text-center">
-    <img src="https://via.placeholder.com/400x200" class="img-fluid" alt="Hero Image">
-    <h1 class="mt-4">Welcome to Our Website</h1>
+    <img src="https://images.squarespace-cdn.com/content/v1/5133bc80e4b0c6fb04dcd6c4/a9f8cdb5-ec2c-47f8-b5e4-a8787cd3dd17/robin_arkham_origins_earth2_portrait_web.jpg" height="300px" width="400px" class="img-fluid" alt="Hero Image">
+    <h1 class="mt-4">Welcome to the R Website</h1>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius justo sit amet dolor scelerisque, ac consectetur purus tempor.</p>
   </div>
 </section>
