--- a/lab10.html
+++ b/lab10.html
@@ -23,13 +23,13 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
+        <a class="nav-link" href="services-section">Services</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="contact-section">Contact</a>
       </li>
     </ul>
   </div>
@@ -52,7 +52,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Service 1</h5>
-            <p class="card-text">Description of Service 1.</p>
+            <p class="card-text">Crime fighting</p>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Service 2</h5>
-            <p class="card-text">Description of Service 2.</p>
+            <p class="card-text">Advanced investigation</p>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Service 3</h5>
-            <p class="card-text">Description of Service 3.</p>
+            <p class="card-text">Security Services</p>
           </div>
         </div>
       </div>
